Fix Jumplist favicons to have high-resolution in HDPI Windows displays

On a HDPI windows machine, if right-click Chrome in the taskbar, the
jumplist favicons are not displayed in high-resolution. They look
blurry, different from other favicons in the rest of Chrome, e.g., tabs.
As reported, Internet Explorer doesn't have this issue.

The root cause is that 1x bitmap (16x16) is always used to create
jumplist icon file by the current jumplist implementation.

This CL fixes this issue. The idea is that for all the display scales
supported by the platform, get/compute all corresponding bitmaps and
write them to the disk. In this way, the appropriate icon bitmap is used
when a user changes the screen display scale.

BUG=676901
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.win:win10_chromium_x64_rel_ng

Review-Url: https://codereview.chromium.org/2665623002
Cr-Commit-Position: refs/heads/master@{#449134}